edv_cdv/style.css
/*Global*/

html, body {
  height: 100%;
  width: 100%;
  margin: 0;
  /*
  padding: 5px;
  */
}

body {
  overflow: auto;
  background-image: url(backgrounds/spirit/blackHistoryMonth/MalcomX.jpg);
  background-color: black;
  background-size: cover;
  background-repeat: no-repeat;
  background-attachment: fixed;
}

/*-----Return to index button-----*/
.buttDiv {
  position: absolute;
  top: 900px;
  right: 200px;
}

.accessButton {
  margin-top: 200px;
  background-color: #0a5ff3;
  border: none;
  color: white;
  padding: 15px 32px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 16px;
  margin: 4px 2px;
  cursor: pointer;
  border-radius: 10px;
  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
  transition: all 0.3s ease-in-out;
}



/*----------index----------*/

.container {
  display: flex;
  flex: 0, 1, 0;
  flex-direction: row;
}

.boxOne {
  display: flex;
  justify-content: flex-start;
  flex-direction: column;
}

.bullBox {
  display: flex;
  justify-content: space-around;
  align-items: center;
  background-image: url(bulletinBoard.jpg);
  height: 500px;
  width: 1150px;
}

.info {
  min-height: 5%;
  margin-bottom: 0;
  padding: 10px 0 10px 0px;
  /*
  background-color: black;
  */
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  align-items: center;
}

.button {
  display: inline-block;
  padding: 15px 25px;
  font-size: 24px;
  cursor: pointer;
  text-align: center;
  text-decoration: none;
  outline: none;
  color: #fff;
  background-color: skyblue; 
  border: none;
  border-radius: 15px;
 
}

.button:hover {background-color: #0876f4;
} 

.button:active {
  background-color: #87CEEB;
  box-shadow: 0 5px #666;
  transform: translateY(4px);
}

.sticky-note1 {
  display: inline-block;
  word-wrap: break-word;
  width: 250px;
  height: 200px;
  background-color: #FFFF00; 
  border-radius: 10px;
  padding: 20px;
  position: relative;
  box-shadow: 2px 2px 10px #888888;
  font-family:Arial, Helvetica, sans-serif;
  font-style: italic;
  font-weight: 1000;
  font-size: larger;
  
}

.sticky-note2 {
  display: inline-block;
  word-wrap: break-word;
  width: 250px;
  height: 200px;
  background-color: #00e1ff; 
  border-radius: 10px;
  padding: 20px;
  position: relative;
  box-shadow: 2px 2px 10px #888888;
  font-family:Arial, Helvetica, sans-serif;
  font-style: italic;
  font-weight: 1000;
  font-size: larger;
  
}

.sticky-note3 {
  display: inline-block;
  word-wrap: break-word;
  width: 250px;
  height: 200px;
  background-color: #b835f5; 
  border-radius: 10px;
  padding: 20px;
  position: relative;
  box-shadow: 2px 2px 10px #888888;
  font-family:Arial, Helvetica, sans-serif;
  font-style: italic;
  font-weight: 1000;
  font-size: larger;
  
}

.scheduleForm {
  background-color: rgba(191, 227, 245, 0.675);
}


/*-----------access----------*/

.accessContainer {
  display: flex;
  flex-direction: row;
  flex: 1;

}

.accessRight {
  display: flex;
  flex-direction: column;
}

.note {
  flex-direction: row;
  padding: 0 5px 30px 5px;
  font-size: x-large;
  background-color:rgba(242, 207, 164, 0.901);
  font-style: oblique;
  height: 10%;
  margin-top: 10px;
  /*margin-bottom is the button's distance from the note*/
  margin-bottom: 550px;
  border-radius: 5px;
  
  
}

  
.accessButton:hover {
  background-color: #15ee05;
  transform: scale(2.1);
}
.accessButton:active {
  transform: scale(0.95);
  box-shadow: 0 5px #666;
  -webkit-box-shadow: 0 5px #666;
  -moz-box-shadow: 0 5px #666;
}



/*-----------------Contacts------------------*/


.contactsContainer {
  display: flex;
  flex: 1, 0, 1;
  flex-direction: column;
  height: 100vh;
  width: 100vw;
  justify-content:space-evenly;
  align-items: center;
  
  
}

.accessBoxOne {
  display: flex;
  justify-content: space-around;
  height: 30%;
  width: 100%;
}

.accessBoxTwo {
  display: flex;
  justify-content: space-around;
  height: 30%;
  Width: 90%;
}

.accessBoxThree {
  display: flex;
  justify-content: space-around;
  height: 30%;
  width: 60%;
}

.badges p {
  display: flex;
  flex-direction: column-reverse;
  justify-content: space-around;
  align-items: center;
  text-align: center;
  margin: 0;
  background-color: #009dff;
  width: 200px;
  
}


.badgePhoto img {
  height: 150px;
  width: 105px;
}

.contReturn {
  position: absolute;
  top: 900px;
  right: 200px;
  
}



/*------Feedback-------*/

.fbContainer {
display: flex;
width: 100%;
justify-content: flex-start;
/*
margin-left: 12%
*/
}

